docs: add xAI Grok and Mistral AI provider configs

--- a/docs/custom-model-configs/mistral-ai.mdx
+++ b/docs/custom-model-configs/mistral-ai.mdx
@@ -11,24 +11,24 @@ Cline supports accessing models through the Mistral AI API, including both stand
 
 1.  **Sign Up/Sign In:** Go to the [Mistral Platform](https://console.mistral.ai/). Create an account or sign in. You may need to go through a verification process.
 2.  **Create an API Key:**
-    *   [La Plateforme API Key](https://console.mistral.ai/api-keys/) and/or
-    *   [Codestral API Key](https://console.mistral.ai/codestral)
+    -   [La Plateforme API Key](https://console.mistral.ai/api-keys/) and/or
+    -   [Codestral API Key](https://console.mistral.ai/codestral)
 
 ### Supported Models
 
 Cline supports the following Mistral models:
 
-- pixtral-large-2411
-- ministral-3b-2410
-- ministral-8b-2410
-- mistral-small-latest
-- mistral-medium-latest
-- mistral-small-2501
-- pixtral-12b-2409
-- open-mistral-nemo-2407
-- open-codestral-mamba
-- codestral-2501
-- devstral-small-2505
+-   pixtral-large-2411
+-   ministral-3b-2410
+-   ministral-8b-2410
+-   mistral-small-latest
+-   mistral-medium-latest
+-   mistral-small-2501
+-   pixtral-12b-2409
+-   open-mistral-nemo-2407
+-   open-codestral-mamba
+-   codestral-2501
+-   devstral-small-2505
 
 **Note:** Model availability and specifications may change.
 Refer to the [Mistral AI documentation](https://docs.mistral.ai/api/) and [Mistral Model Overview](https://docs.mistral.ai/getting-started/models/models_overview/) for the most current information.
