docs: add Extended Thinking section to Anthropic configuration guide

--- a/docs/custom-model-configs/ollama.mdx
+++ b/docs/custom-model-configs/ollama.mdx
@@ -3,7 +3,7 @@ title: "Ollama"
 description: "Ollama"
 ---
 
-Cline supports running models locally using Ollama. This approach offers privacy, offline access, and potentially reduced costs, though it requires some initial setup and a sufficiently powerful computer.
+Cline supports running models locally using Ollama. This approach offers privacy, offline access, and potentially reduced costs. It requires some initial setup and a sufficiently powerful computer. Because of the present state of consumer hardware, it's not recommended to use Ollama with Cline as performance will likely be poor for average hardware configurations.
 
 **Website:** [https://ollama.com/](https://ollama.com/)
 
