--- a/docs/custom-model-configs/openai.mdx
+++ b/docs/custom-model-configs/openai.mdx
@@ -18,7 +18,9 @@ Cline supports accessing models directly through the official OpenAI API.
 
 Cline is compatible with a variety of OpenAI models, including but not limited to:
 
+-   'o3'
 -   `o3-mini` (medium reasoning effort)
+-   'o4-mini'
 -   `o3-mini-high` (high reasoning effort)
 -   `o3-mini-low` (low reasoning effort)
 -   `o1`
@@ -27,6 +29,8 @@ Cline is compatible with a variety of OpenAI models, including but not limited t
 -   `gpt-4.5-preview`
 -   `gpt-4o`
 -   `gpt-4o-mini`
+-   'gpt-4.1'
+-   'gpt-4.1-mini'
 
 For the most current list of available models and their capabilities, please refer to the official [OpenAI Models documentation](https://platform.openai.com/docs/models).
 
