docs: update vscode language model api docs

--- a/docs/custom-model-configs/vscode-language-model-api.mdx
+++ b/docs/custom-model-configs/vscode-language-model-api.mdx
@@ -28,9 +28,11 @@ Cline offers _experimental_ support for the [VS Code Language Model API](https:/
     - `copilot - gpt-4`
     - `copilot - gpt-4-turbo`
     - `copilot - gpt-4o`
-    - `copilot - claude-3.5-sonnet`
+    - `copilot - claude-3.5-sonnet` **NOTE:** this model does not work.
     - `copilot - gemini-2.0-flash`
     - `copilot - gpt-4.1`
+
+For best results with the VSCode LM API Provider, we suggest using the OpenAI Models (GPT 3, 4, 4.1, 4o etc.)
 
 ### Current Limitations
 
